--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@
 server.port = 8080
 
 #mysql
-spring.datasource.url=jdbc:mysql://localhost/spring_boot_demo?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=MYSQL
-spring.datasource.password=ldf5358
+spring.datasource.url=jdbc:mysql://106.14.121.102:3306/spring_boot_demo?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #链接池的配置
